chnage api for download image